@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.3 2004/10/10 18:26:00 jdolecek Exp $
+$NetBSD: distinfo,v 1.4 2004/10/25 17:40:01 jdolecek Exp $
 
-SHA1 (postgresql-7.3.7.tar.gz) = 5c3c865146a531cb49427672483c9cba6f14ddf8
-Size (postgresql-7.3.7.tar.gz) = 11284024 bytes
+SHA1 (postgresql-7.3.8.tar.gz) = bd27703cbcc219d36521a0e57233408a6f70b342
+Size (postgresql-7.3.8.tar.gz) = 11293472 bytes
 SHA1 (patch-aa) = 61fbeb664b0d89c83a36c79cca3fbdc78d6f5059
 SHA1 (patch-ac) = 5a647cc31873ae81a5bd5a6cf4ec6f44a43448e7
 SHA1 (patch-ad) = a7bdfab69fdc9063d03adae7229f55ba356f2282
